--- a/acube/src/App.css
+++ b/acube/src/App.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-
 :root {
   --font-family: "Inter", sans-serif;
   --primary-color: #10243E;
@@ -10,6 +8,7 @@
   --medium-font-size: 20px;
   --lg-medium-font-size: 22px;
   --large-font-size: 36px;
+  --xl-font-size: 48px;
 }
 
 body {
@@ -41,6 +40,10 @@ h6 {
   font-size: var(--small-font-size);
 }
 
+.big-title {
+  font-size: var(--xl-font-size);
+}
+
 p,
 a {
   font-size: var(--base-font-size);
@@ -50,11 +53,16 @@ a {
   font-weight: 500;
 }
 
-.ft-wt-600{
+.ft-wt-600 {
   font-weight: 600;
 }
-.opacity-70{
+
+.opacity-70 {
   opacity: 0.7;
+}
+
+.text-primary{
+  color: var(--primary-color)!important;
 }
 
 @media (max-width: 767.5px) {
@@ -65,6 +73,7 @@ a {
     --medium-font-size: 18px;
     --lg-medium-font-size: 20px;
     --large-font-size: 30px;
+    --xl-font-size: 40px;
   }
 }
 
@@ -76,6 +85,7 @@ a {
     --medium-font-size: 20px;
     --lg-medium-font-size: 22px;
     --large-font-size: 36px;
+    --xl-font-size: 42px;
   }
 }
 
@@ -87,6 +97,7 @@ a {
     --medium-font-size: 20px;
     --lg-medium-font-size: 22px;
     --large-font-size: 36px;
+    --xl-font-size: 48px;
   }
 }
 
@@ -103,13 +114,19 @@ a {
   padding: 12px 24px;
 }
 
-.btn-primary,.btn-primary:active,.btn-primary:focus,.btn-primary:hover {
+.btn-primary,
+.btn-primary:active,
+.btn-primary:focus,
+.btn-primary:hover {
   background-color: var(--primary-color);
   color: var(--secondary-color);
 }
 
 
-.btn-secondary,.btn-secondary:hover,.btn-secondary:active,.btn-secondary:focus {
+.btn-secondary,
+.btn-secondary:hover,
+.btn-secondary:active,
+.btn-secondary:focus {
   background-color: var(--secondary-color);
   color: var(--primary-color);
 }
@@ -124,6 +141,6 @@ a {
   padding: 0;
 }
 
-.mt-120{
+.mt-120 {
   margin-top: 120px;
 }
