--- a/acube/src/components/forms/forms.css
+++ b/acube/src/components/forms/forms.css
@@ -3,7 +3,8 @@
     margin: auto;
 }
 
-.contact-form-section input.form-control, .contact-form-section select.form-control {
+.contact-form-section input.form-control,
+.contact-form-section select.form-control {
     width: 100%;
     height: 56px;
     padding: 16px 12px;
@@ -26,11 +27,12 @@
     padding-left: 48px;
     font-family: Inter;
 }
-.contact-form-section .react-tel-input .form-control::placeholder{
+
+.contact-form-section .react-tel-input .form-control::placeholder {
     color: #919191;
 }
 
-.contact-form-section textarea.form-control{
+.contact-form-section textarea.form-control {
     font-family: Inter;
     font-size: 16px;
     font-weight: 600;
@@ -48,7 +50,30 @@
     border: 1px solid #E0E0E0
 }
 
-.contact-form-section form{
+.contact-form-section form {
     max-width: 1104px;
     margin: auto;
+}
+
+.contact-form-section .card-block {
+    border: 1px solid #DBD7D7;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    padding: 36px 46px;
+    border-radius: 24px;
+    max-width: 435px;
+    margin: auto;
+}
+
+.contact-form-section .card-block .card-title {
+    font-size: 22.86px;
+    font-weight: 600;
+    line-height: 28.58px;
+    text-align: left;
+}
+
+.contact-form-section .card-block .card-subtitle {
+    font-size: 11.43px;
+    font-weight: 500;
+    line-height: 15.72px;
+    text-align: left;
 }
