--- a/acube/src/pages/home/home.css
+++ b/acube/src/pages/home/home.css
@@ -14,7 +14,7 @@
 }
 
 .hero-wrapper .section-subtitle {
-    color: #fff;
+    color: var(--secondary-color);
     font-family: Inter;
     font-size: 32px;
     font-weight: 400;
@@ -31,7 +31,7 @@
     line-height: 77.45px;
     letter-spacing: -0.01em;
     text-align: center;
-    color: #fff;
+    color: var(--secondary-color);
     text-transform: uppercase;
 }
 
