--- a/acube/src/pages/contact-us/contact-us.css
+++ b/acube/src/pages/contact-us/contact-us.css
@@ -2,6 +2,10 @@
     line-height: 1.7;
 }
 
+.contact-us-section{
+    padding:2rem 0;
+}
+
 .contact-us-section .bg-img{
     background-image: url(../../images/contact-us/world-bg.webp);
     background-repeat: no-repeat;
