--- a/acube/src/components/forms/forms.css
+++ b/acube/src/components/forms/forms.css
@@ -78,6 +78,12 @@
     text-align: left;
 }
 
+.alert{
+    font-size: 16px;
+    padding: 10px;
+}
+
+
 @media(max-width:992px) {
     .contact-form-section .card-block {
         padding: 20px;
